--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
     "require": {
         "omnipay/common": "^3",
         "spatie/array-to-xml": "2.8.*",
-        "nesbot/carbon": "2.16.*",
+        "nesbot/carbon": "2.16.*"
     },
     "require-dev": {
-        "omnipay/tests": "^3",
+        "omnipay/tests": "^3"
     },
     "prefer-stable": true
 }
