--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,6 @@
     "require-dev": {
         "omnipay/tests": "^4"
     },
-    "prefer-stable": true
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
