--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require": {
         "league/omnipay": "^3.2",
-        "spatie/array-to-xml": "^3",
+        "spatie/array-to-xml": "3.*",
         "nesbot/carbon": "2.*",
         "ext-openssl": "*"
     },
